--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0"
   },
