--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
     "next": "^14.2.13",
     "react": "^18.3.1",
